changes in header

--- a/Index.html
+++ b/Index.html
@@ -1,33 +1,75 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Fundación MGAS</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
   <header>
-    <h1>Fundación MGAS</h1>
-    <p>Mejorando vidas con empatía y acción social</p>
+
+    <div class="sidebar">
+
+      <img class="logo" src="/images/Logo.png" alt="logo">
+
+      <nav>
+        <a href="#inicio">Inicio</a>
+        <a href="#nosotros">Nosotros</a>
+        <a href="#presidenta">Presidenta</a>
+        <a href="#auditorias">Auditorias</a>
+        <a href="#noticias">Noticias</a>
+        <a href="#donar">Donar</a>
+        <a href="#galeria">Galeria</a>
+        <a href="#contacto">Contacto</a>
+      </nav>
+
+    </div>
+
   </header>
 
-  <nav>
-    <a href="#inicio">Inicio</a>
-    <a href="#nosotros">Nosotros</a>
-    <a href="#proyectos">Proyectos</a>
-    <a href="#contacto">Contacto</a>
-  </nav>
 
   <section class="hero" id="inicio">
-    <h1>Bienvenidos a Fundación MGAS</h1>
-    <p>Trabajamos por el bienestar de comunidades vulnerables a través de proyectos sociales sostenibles.</p>
+
+    <div class="galery">
+      <img class="galery-images" src="/images/Imagen2.png" alt="primera">>
+
+      <div class="text-galery">
+
+        <div class="texts">
+          <h2>SOMOS UNA FUNDACION</h2>
+          <h1>SIN FINES DE LUCRO</h1>
+        </div>
+
+        <div class="button-text">
+
+          <div class="text-button1">
+            <h1>PRESIDENTA</h1>
+            <a class="button1" href="#presidenta">Más info.</a>
+          </div>
+
+          <div class="text-button2">
+            <h1>DONACIONES</h1>
+            <a class="button2" href="#donaciones">Más info.</a>
+          </div>
+
+          <div class="text-button3">
+            <h1>CONTACTO</h1>
+            <a class="button3" href="#contacto">Más info.</a>
+          </div>
+
+        </div>
+      </div>
+      
   </section>
 
   <section class="seccion" id="nosotros">
     <h2>¿Quiénes Somos?</h2>
-    <p>Somos una organización comprometida con la justicia social, enfocada en mejorar la calidad de vida de personas en situación de vulnerabilidad.</p>
+    <p>Somos una organización comprometida con la justicia social, enfocada en mejorar la calidad de vida de personas en
+      situación de vulnerabilidad.</p>
   </section>
 
   <section class="seccion" id="proyectos">
@@ -50,4 +92,5 @@
   </footer>
 
 </body>
+
 </html>
