--- a/Index.html
+++ b/Index.html
@@ -10,61 +10,61 @@
 
 <body>
 
-  <header>
+ <header>
+  <div class="sidebar">
+    <img class="logo" src="/images/Logo.png" alt="logo">
 
-    <div class="sidebar">
+    <div class="menu-toggle" id="menu-toggle">&#9776;</div> <!-- Hamburger Icon -->
 
-      <img class="logo" src="/images/Logo.png" alt="logo">
+    <nav id="nav">
+      <a href="#inicio">Inicio</a>
+      <a href="#nosotros">Nosotros</a>
+      <a href="#presidenta">Presidenta</a>
+      <a href="#auditorias">Auditorias</a>
+      <a href="#noticias">Noticias</a>
+      <a href="#donar">Donar</a>
+      <a href="#galeria">Galería</a>
+      <a href="#contacto">Contacto</a>
+    </nav>
+  </div>
+</header>
 
-      <nav>
-        <a href="#inicio">Inicio</a>
-        <a href="#nosotros">Nosotros</a>
-        <a href="#presidenta">Presidenta</a>
-        <a href="#auditorias">Auditorias</a>
-        <a href="#noticias">Noticias</a>
-        <a href="#donar">Donar</a>
-        <a href="#galeria">Galeria</a>
-        <a href="#contacto">Contacto</a>
-      </nav>
-
-    </div>
-
-  </header>
 
 
   <section class="hero" id="inicio">
+  <div class="galery">
+    <img class="galery-images" src="/images/Imagen2.png" alt="primera">
 
-    <div class="galery">
-      <img class="galery-images" src="/images/Imagen2.png" alt="primera">>
+    <div class="text-galery">
 
-      <div class="text-galery">
-
-        <div class="texts">
-          <h2>SOMOS UNA FUNDACION</h2>
-          <h1>SIN FINES DE LUCRO</h1>
-        </div>
-
-        <div class="button-text">
-
-          <div class="text-button1">
-            <h1>PRESIDENTA</h1>
-            <a class="button1" href="#presidenta">Más info.</a>
-          </div>
-
-          <div class="text-button2">
-            <h1>DONACIONES</h1>
-            <a class="button2" href="#donaciones">Más info.</a>
-          </div>
-
-          <div class="text-button3">
-            <h1>CONTACTO</h1>
-            <a class="button3" href="#contacto">Más info.</a>
-          </div>
-
-        </div>
+      <div class="texts">
+        <h2>SOMOS UNA FUNDACIÓN</h2>
+        <h1>SIN FINES DE LUCRO</h1>
       </div>
-      
-  </section>
+
+      <div class="button-text">
+
+        <div class="text-button1">
+          <h1>PRESIDENTA</h1>
+          <a class="button1" href="#presidenta">Más Info.</a>
+        </div>
+
+        <div class="text-button2">
+          <h1>DONACIONES</h1>
+          <a class="button2" href="#donaciones">Más Info.</a>
+        </div>
+
+        <div class="text-button3">
+          <h1>CONTACTO</h1>
+          <a class="button3" href="#contacto">Más Info.</a>
+        </div>
+
+      </div>
+        
+    </div>
+  </div>
+</section>
+
 
   <section class="seccion" id="nosotros">
     <h2>¿Quiénes Somos?</h2>
@@ -90,6 +90,8 @@
   <footer>
     &copy; 2025 Fundación MGAS | Todos los derechos reservados
   </footer>
+
+  <script src="/main.js"></script>
 
 </body>
 
