working in new section

--- a/Index.html
+++ b/Index.html
@@ -29,8 +29,6 @@
   </div>
 </header>
 
-
-
   <section class="hero" id="inicio">
   <div class="galery">
     <img class="galery-images" src="/images/Imagen2.png" alt="primera">
@@ -63,6 +61,27 @@
         
     </div>
   </div>
+</section>
+
+<section class="info" >
+  
+  <div class="malala">
+    <img class="malala-img" src="/images/Imagen1.png" alt="photo">
+  </div>
+
+  <div class="mgas">
+
+    <div class="fundacion">
+     <h2>Apoyando a más de 1,234 familias, por:
+      Más de 2700 pacientes beneficiados.
+     </h2>
+     <h1>FUNDACIÓN MGAS.AC</h1>
+    </div>
+
+    <img class="mgas-img" src="/images/Imagen6.png" alt="photo">
+
+  </div>
+
 </section>
 
 
