--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
  <header>
   <div class="sidebar">
-    <img class="logo" src="/images/Logo.png" alt="logo">
+    <img class="logo" src="/images/logo.png" alt="logo">
 
     <div class="menu-toggle" id="menu-toggle">&#9776;</div> <!-- Hamburger Icon -->
 
@@ -31,7 +31,7 @@
 
   <section class="hero" id="inicio">
   <div class="galery">
-    <img class="galery-images" src="/images/Imagen2.png" alt="primera">
+    <img class="galery-images" src="/images/imagen2.png" alt="primera">
 
     <div class="text-galery">
 
@@ -66,7 +66,7 @@
 <section class="info" >
   
   <div class="malala">
-    <img class="malala-img" src="/images/Imagen1.png" alt="photo">
+    <img class="malala-img" src="/images/imagen1.png" alt="photo">
   </div>
 
   <div class="mgas">
@@ -78,7 +78,7 @@
      <h1>FUNDACIÓN MGAS.AC</h1>
     </div>
 
-    <img class="mgas-img" src="/images/Imagen6.png" alt="photo">
+    <img class="mgas-img" src="/images/imagen6.png" alt="photo">
 
   </div>
 
