modifications of roots

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     &copy; 2025 Fundación MGAS | Todos los derechos reservados
   </footer>
 
-  <script src="/main.js"></script>
+  <script src="main.js"></script>
 
 </body>
 
