--- a/index.html
+++ b/index.html
@@ -36,24 +36,24 @@
     <div class="text-galery">
 
       <div class="texts">
-        <h2>SOMOS UNA FUNDACIÓN</h2>
-        <h1>SIN FINES DE LUCRO</h1>
+        <h2 class="main-tittle">SOMOS UNA FUNDACIÓN</h2>
+        <h1 class="main-tittle">SIN FINES DE LUCRO</h1>
       </div>
 
       <div class="button-text">
 
         <div class="text-button1">
-          <h1>PRESIDENTA</h1>
+          <h1 class="min-text">PRESIDENTA</h1>
           <a class="button1" href="#presidenta">Más Info.</a>
         </div>
 
         <div class="text-button2">
-          <h1>DONACIONES</h1>
+          <h1 class="min-text" >DONACIONES</h1>
           <a class="button2" href="#donaciones">Más Info.</a>
         </div>
 
         <div class="text-button3">
-          <h1>CONTACTO</h1>
+          <h1 class="min-text" >CONTACTO</h1>
           <a class="button3" href="#contacto">Más Info.</a>
         </div>
 
@@ -72,10 +72,10 @@
   <div class="mgas">
 
     <div class="fundacion">
-     <h2>Apoyando a más de 1,234 familias, por:
+     <h2 class="tittle1">Apoyando a más de 1,234 familias, por:
       Más de 2700 pacientes beneficiados.
      </h2>
-     <h1>FUNDACIÓN MGAS.AC</h1>
+     <h1 class="tittle2">FUNDACIÓN MGAS.AC</h1>
     </div>
 
     <img class="mgas-img" src="images/imagen6.png" alt="photo">
