section nosotros, done

--- a/index.html
+++ b/index.html
@@ -85,10 +85,47 @@
 </section>
 
 
-  <section class="seccion" id="nosotros">
-    <h2>¿Quiénes Somos?</h2>
-    <p>Somos una organización comprometida con la justicia social, enfocada en mejorar la calidad de vida de personas en
-      situación de vulnerabilidad.</p>
+  <section class="aboutus" id="nosotros">
+
+    <h2 class="tittle3">NUESTRA INSTITUCIÓN</h2>
+
+    <div class="nosotros">
+
+      <div class="nosotros-inf">
+        <img class="img-nosotros"  src="images/imagen7.png" alt="">
+        <h3>MISIÓN</h3>
+        <p class="parrafo">Apoyar a niños en situcion de pobreza
+          extrema, marginación, población indigena y
+          escasos recursos con parálisis cerebral,
+          displegia espástica, cuadríplegía espástica o
+          alguna espasticidad para que puedan ser
+          valorados y en su caso intervenidos.
+        </p>
+      </div>
+
+      <div class="nosotros-inf">
+        <img class="img-nosotros" src="images/imagen8.png" alt="">
+        <h3>VISIÓN</h3>
+        <p class="parrafo">Mejorar la calidad de vida de niños y niñas con
+          parálisis Cerebral espástica y sus familias.
+          (Fibrotomía Gradual Muscular), Logrando llevar
+          las jornadas de Cirugías a diferentes estados de 
+          la República Mexicana y países de 
+          Latinoamerica.
+        </p>
+      </div>
+
+      <div class="nosotros-inf">
+        <img class="img-nosotros" src="images/imagen9.png" alt="">
+        <h3>VALORES</h3>
+        <p class="parrafo"> •AMOR •TEMPLANZA •ESPERANZA
+          •SOLIDARIDAD •ESFUERZO •DISCIPLINA 
+          •ALEGRIA •RESPETO •TOLERANCIA
+          •RESPONSABILIDAD •FE •FAMILIA 
+          •VOLUNTARIADO •HONESTIDAD                
+        </p>
+      </div>
+    </div>
   </section>
 
   <section class="seccion" id="proyectos">
