working on president section

--- a/index.html
+++ b/index.html
@@ -10,79 +10,79 @@
 
 <body>
 
- <header>
-  <div class="sidebar">
-    <img class="logo" src="images/logo.png" alt="logo">
+  <header>
+    <div class="sidebar">
+      <img class="logo" src="images/logo.png" alt="logo">
 
-    <div class="menu-toggle" id="menu-toggle">&#9776;</div> <!-- Hamburger Icon -->
+      <div class="menu-toggle" id="menu-toggle">&#9776;</div> <!-- Hamburger Icon -->
 
-    <nav id="nav">
-      <a href="#inicio">Inicio</a>
-      <a href="#nosotros">Nosotros</a>
-      <a href="#presidenta">Presidenta</a>
-      <a href="#auditorias">Auditorias</a>
-      <a href="#noticias">Noticias</a>
-      <a href="#donar">Donar</a>
-      <a href="#galeria">Galería</a>
-      <a href="#contacto">Contacto</a>
-    </nav>
-  </div>
-</header>
+      <nav id="nav">
+        <a href="#inicio">Inicio</a>
+        <a href="#nosotros">Nosotros</a>
+        <a href="#presidenta">Presidenta</a>
+        <a href="#auditorias">Auditorias</a>
+        <a href="#noticias">Noticias</a>
+        <a href="#donar">Donar</a>
+        <a href="#galeria">Galería</a>
+        <a href="#contacto">Contacto</a>
+      </nav>
+    </div>
+  </header>
 
   <section class="hero" id="inicio">
-  <div class="galery">
-    <img class="galery-images" src="images/imagen4.png" alt="primera">
+    <div class="galery">
+      <img class="galery-images" src="images/imagen4.png" alt="primera">
 
-    <div class="text-galery">
+      <div class="text-galery">
 
-      <div class="texts">
-        <h2 class="main-tittle">SOMOS UNA FUNDACIÓN</h2>
-        <h1 class="main-tittle">SIN FINES DE LUCRO</h1>
+        <div class="texts">
+          <h2 class="main-tittle">SOMOS UNA FUNDACIÓN</h2>
+          <h1 class="main-tittle">SIN FINES DE LUCRO</h1>
+        </div>
+
+        <div class="button-text">
+
+          <div class="text-button1">
+            <h1 class="min-text">PRESIDENTA</h1>
+            <a class="button1" href="#presidenta">Más Info.</a>
+          </div>
+
+          <div class="text-button2">
+            <h1 class="min-text">DONACIONES</h1>
+            <a class="button2" href="#donaciones">Más Info.</a>
+          </div>
+
+          <div class="text-button3">
+            <h1 class="min-text">CONTACTO</h1>
+            <a class="button3" href="#contacto">Más Info.</a>
+          </div>
+
+        </div>
+
       </div>
-
-      <div class="button-text">
-
-        <div class="text-button1">
-          <h1 class="min-text">PRESIDENTA</h1>
-          <a class="button1" href="#presidenta">Más Info.</a>
-        </div>
-
-        <div class="text-button2">
-          <h1 class="min-text" >DONACIONES</h1>
-          <a class="button2" href="#donaciones">Más Info.</a>
-        </div>
-
-        <div class="text-button3">
-          <h1 class="min-text" >CONTACTO</h1>
-          <a class="button3" href="#contacto">Más Info.</a>
-        </div>
-
-      </div>
-        
     </div>
-  </div>
-</section>
+  </section>
 
-<section class="info" >
-  
-  <div class="malala">
-    <img class="malala-img" src="images/imagen1.png" alt="photo">
-  </div>
+  <section class="info">
 
-  <div class="mgas">
-
-    <div class="fundacion">
-     <h2 class="tittle1">Apoyando a más de 1,234 familias, por:
-      Más de 2700 pacientes beneficiados.
-     </h2>
-     <h1 class="tittle2">FUNDACIÓN MGAS.AC</h1>
+    <div class="malala">
+      <img class="malala-img" src="images/imagen1.png" alt="photo">
     </div>
 
-    <img class="mgas-img" src="images/imagen6.png" alt="photo">
+    <div class="mgas">
 
-  </div>
+      <div class="fundacion">
+        <h2 class="tittle1">Apoyando a más de 1,234 familias, por:
+          Más de 2700 pacientes beneficiados.
+        </h2>
+        <h1 class="tittle2">FUNDACIÓN MGAS.AC</h1>
+      </div>
 
-</section>
+      <img class="mgas-img" src="images/imagen6.png" alt="photo">
+
+    </div>
+
+  </section>
 
 
   <section class="aboutus" id="nosotros">
@@ -92,7 +92,7 @@
     <div class="nosotros">
 
       <div class="nosotros-inf">
-        <img class="img-nosotros"  src="images/imagen7.png" alt="">
+        <img class="img-nosotros" src="images/imagen7.png" alt="">
         <h3>MISIÓN</h3>
         <p class="parrafo">Apoyar a niños en situcion de pobreza
           extrema, marginación, población indigena y
@@ -109,8 +109,8 @@
         <p class="parrafo">Mejorar la calidad de vida de niños y niñas con
           parálisis Cerebral espástica y sus familias.
           (Fibrotomía Gradual Muscular), Logrando llevar
-          las jornadas de Cirugías a diferentes estados de 
-          la República Mexicana y países de 
+          las jornadas de Cirugías a diferentes estados de
+          la República Mexicana y países de
           Latinoamerica.
         </p>
       </div>
@@ -119,18 +119,46 @@
         <img class="img-nosotros" src="images/imagen9.png" alt="">
         <h3>VALORES</h3>
         <p class="parrafo"> •AMOR •TEMPLANZA •ESPERANZA
-          •SOLIDARIDAD •ESFUERZO •DISCIPLINA 
+          •SOLIDARIDAD •ESFUERZO •DISCIPLINA
           •ALEGRIA •RESPETO •TOLERANCIA
-          •RESPONSABILIDAD •FE •FAMILIA 
-          •VOLUNTARIADO •HONESTIDAD                
+          •RESPONSABILIDAD •FE •FAMILIA
+          •VOLUNTARIADO •HONESTIDAD
         </p>
       </div>
     </div>
   </section>
 
-  <section class="seccion" id="proyectos">
-    <h2>Nuestros Proyectos</h2>
-    <p>Conoce nuestras iniciativas en salud, educación y desarrollo comunitario.</p>
+  <section class="president" id="presidenta">
+
+    <h2 class="presidenta">PRESIDENTA</h2>
+
+    <div class="about-me">
+
+      <div class="biografia">
+
+        <h5 class="mari">MARI ROUSS VILLEGAS BALMORI</h5>
+
+        <p class="bio">
+          (Pachuca, Hidalgo, México) es Presidenta de la Fundación MGAS, A.C. que
+          apoya a niños en situación de pobreza extrema y con parálisis cerebral o
+          alguna espasticidad para que sean valorados e intervenidos mediante la
+          técnica de Fibrotomía Gradual Muscular para que el paciente mejore su
+          calidad de vida y tenga mayor rango de movimiento.
+        </p>
+
+        <ul class="acordeon">
+          <li>BIOGRAFÍA</li>
+          <li>ESTUDIOS</li>
+          <li>LABOR SOCIAL</li>
+          <li>EXPERIENCIA PERSONAL EN PARÁLISIS CEREBRAL</li>
+        </ul>
+
+      </div>
+
+      <img class="img-me" src="images/imagen10.png" alt="">
+
+    </div>
+
   </section>
 
   <section class="seccion" id="contacto">
