changes in different sections

--- a/index.html
+++ b/index.html
@@ -161,8 +161,28 @@
 
   </section>
 
+  <section class="auditory" id="auditorias">
+
+    <h1 class="tittle4">EMPRESA AUDITORA</h1>
+
+    <div class="auditoria">
+
+      <div class="textos-auditoria">
+        <h2 class="auditor">AUDITOR</h2>
+        <h1 class="tittle5">Ernst and Young</h1>
+        <p>En 2017 E&Y nos realiza la primer auditoria contable.</p>
+        <p class="p-negritas">Obteniendo resultado Satisfactorio.</p>
+        <p class="p-negritas">Cuatro años siendo auditados.</p>
+        <a class="vermas" href="https://www.ey.com/es_mx">Ver más...</a>
+      </div>
+
+      <img class="logoEY" src="images/imagen11.png" alt="">
+
+    </div>
+
+  </section>
+
   <section class="seccion" id="contacto">
-    <h2>Contáctanos</h2>
     <form action="#" method="post">
       <input type="text" name="nombre" placeholder="Tu nombre" required>
       <input type="email" name="correo" placeholder="Tu correo electrónico" required>
