changes in a cupples sections

--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
         </p>
 
         <ul class="acordeon">
-          <li>BIOGRAFÍA</li>
-          <li>ESTUDIOS</li>
+          <li><i class="accordion-icon ti-plus"></i>BIOGRAFÍA</li>
+          <li><i class="fa-solid fa-plus"></i>ESTUDIOS</li>
           <li>LABOR SOCIAL</li>
           <li>EXPERIENCIA PERSONAL EN PARÁLISIS CEREBRAL</li>
         </ul>
