changes in width responsive

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Fundación MGAS</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
@@ -182,13 +183,51 @@
 
   </section>
 
-  <section class="seccion" id="contacto">
-    <form action="#" method="post">
-      <input type="text" name="nombre" placeholder="Tu nombre" required>
-      <input type="email" name="correo" placeholder="Tu correo electrónico" required>
-      <textarea name="mensaje" placeholder="Escribe tu mensaje..." required></textarea>
-      <button type="submit">Enviar mensaje</button>
-    </form>
+  <section class="donar" id="donar">
+    <h1 class="tittle6">APOYANOS CON TU DONACION</h1>
+
+    <div class="info-donacion">
+      <img class="img-donacion" src="images/imagen13.png" alt="">
+      <img class="img-donacion" src="images/imagen12.png" alt="">
+    </div>
+  </section>
+
+  <section class="contactanos">
+
+    <div class="contact">
+      <h2>Contáctanos</h2>
+      <p>Sus opiniones son importantes para nosotros. Ya sea una pregunta simple o una sugerencia valiosa, 
+        estamos aquí 24/7. 
+        Puede llamarnos por teléfono o enviarnos un correo electrónico directamente.</p>
+
+        <div class="mail">
+          <i class="fa-solid fa-envelope"></i>
+          <p>fundacionmgas@gmail.com</p>
+        </div>
+
+        <img class="logo2" src="images/logo.png" alt="logo">
+    </div>
+
+    <div class="seccion-formulario" id="contacto">
+      <form class="formulario" action="#" method="post">
+        <input type="text" name="nombre" placeholder="Tu nombre" required>
+        <input type="email" name="correo" placeholder="Tu correo electrónico" required>
+        <textarea name="mensaje" placeholder="Escribe tu mensaje..." required></textarea>
+        <button type="submit">Enviar mensaje</button>
+      </form>
+    </div>
+
+  </section>
+
+  <section class="redes">
+    <h1 class="text-social">SIGUENOS EN NUESTRAS REDES SOCIALES</h1>
+
+    <div class="img-redes">
+     <a class="img-links" href="https://www.facebook.com/fundacion.mgas/"><img class="img-soci" src="images/fb.png" alt="logo"></a>
+     <a class="img-links" href="https://www.instagram.com/fundacion_mgas/"><img class="img-soci" src="images/instagram.png" alt="logo"></a>
+     <a class="img-links" href="https://x.com/fundacionmgas?s=11"><img class="img-soci" src="images/twitter.png" alt="logo"></a>
+    </div>
+
   </section>
 
   <footer>
